Signal interface: polling not halted when modem is disabled
When the modem is disabled, we should disable the signal quality reload done via polling in the Signal interface.
It looks like this is not happening correctly:
ModemManager[5179]: <debug> [1643872154.483225] [modem0] lte extended signal information updated
ModemManager[5179]: <info> [1643872154.780432] [modem0] state changed (registered -> disabling)
ModemManager[5179]: <debug> [1643872154.780544] [modem0] signal quality updated (0)
ModemManager[5179]: <debug> [1643872154.780562] [modem0] access technology changed (lte -> unknown)
ModemManager[5179]: <debug> [1643872154.780569] [modem0] periodic signal checks disabled
ModemManager[5179]: <debug> [1643872154.780598] [modem0] modem has extended signal reporting capabilities, disabling the Signal interface...
ModemManager[5179]: <debug> [1643872154.780639] [modem0] modem has messaging capabilities, disabling the Messaging interface...
ModemManager[5179]: <info> [1643872154.783745] [modem0] 3GPP registration state changed (home -> unknown)
ModemManager[5179]: <debug> [1643872154.783755] [modem0] consolidated registration state: cs 'idle', ps 'idle', eps 'home', 5gs 'idle' --> 'unknown'
ModemManager[5179]: <debug> [1643872154.783803] [modem0] disabling the Modem interface...
ModemManager[5179]: <debug> [1643872154.783927] [modem0/ccci_sap_gnss/at] device open count is 0 (close)
ModemManager[5179]: <debug> [1643872154.783943] [modem0/ccci_sap_gnss/at] closing serial port...
ModemManager[5179]: <debug> [1643872154.784124] [modem0/ccci_sap_gnss/at] serial port closed
ModemManager[5179]: <info> [1643872154.784142] [modem0] state changed (disabling -> disabled)
ModemManager[5179]: [/dev/ttyCMBIM0] Sent message...
<<<<<< RAW:
<<<<<< length = 48
<<<<<< data = 03:00:00:00:30:00:00:00:39:00:00:00:01:00:00:00:00:00:00:00:59:67:BD:CC:7F:D2:49:A2:9F:5C:B2:E7:0E:52:7D:B3:01:00:00:00:00:00:00:00:00:00:00:00
ModemManager[5179]: [/dev/ttyCMBIM0] Sent message (translated)...
<<<<<< Header:
<<<<<< length = 48
<<<<<< type = command (0x00000003)
<<<<<< transaction = 57
<<<<<< Fragment header:
<<<<<< total = 1
<<<<<< current = 0
<<<<<< Contents:
<<<<<< service = 'atds' (5967bdcc-7fd2-49a2-9f5c-b2e70e527db3)
<<<<<< cid = 'signal' (0x00000001)
<<<<<< type = 'query' (0x00000000)
ModemManager[5179]: [/dev/ttyCMBIM0] Received message...
>>>>>> RAW:
>>>>>> length = 76
>>>>>> data = 03:00:00:80:4C:00:00:00:39:00:00:00:01:00:00:00:00:00:00:00:59:67:BD:CC:7F:D2:49:A2:9F:5C:B2:E7:0E:52:7D:B3:01:00:00:00:00:00:00:00:1C:00:00:00:12:00:00:00:63:00:00:00:FF:00:00:00:FF:00:00:00:16:00:00:00:37:00:00:00:23:00:00:00
ModemManager[5179]: [/dev/ttyCMBIM0] Received message (translated)...
>>>>>> Header:
>>>>>> length = 76
>>>>>> type = command-done (0x80000003)
>>>>>> transaction = 57
>>>>>> Fragment header:
>>>>>> total = 1
>>>>>> current = 0
>>>>>> Contents:
>>>>>> status error = 'None' (0x00000000)
>>>>>> service = 'atds' (5967bdcc-7fd2-49a2-9f5c-b2e70e527db3)
>>>>>> cid = 'signal' (0x00000001)
>>>>>> Fields:
>>>>>> Rssi = '18'
>>>>>> ErrorRate = '99'
>>>>>> Rscp = '255'
>>>>>> Ecno = '255'
>>>>>> Rsrq = '22'
>>>>>> Rsrp = '55'
>>>>>> Rssnr = '35'
ModemManager[5179]: <debug> [1643872159.483454] [modem0] lte extended signal information updated